--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
   },
   "homepage": "https://github.com/chevtek/angular-spinners#readme",
   "dependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/core": "^5.0.0",
+    "@angular/common": ">=4.2.4",
+    "@angular/core": ">=4.2.4",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",
+    "@angular/compiler": ">=4.2.4",
+    "@angular/compiler-cli": ">=4.2.4",
     "copyfiles": "^1.2.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.43.0",
