--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
   },
   "homepage": "https://github.com/chevtek/angular-spinners#readme",
   "dependencies": {
-    "@angular/common": ">=4.2.4",
-    "@angular/core": ">=4.2.4",
+    "@angular/common": ">=5.2.0",
+    "@angular/core": ">=5.2.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.4.1",
+    "rxjs": "^5.5.0",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/compiler": ">=4.2.4",
-    "@angular/compiler-cli": ">=4.2.4",
+    "@angular/compiler": ">=5.2.0",
+    "@angular/compiler-cli": ">=5.2.0",
     "copyfiles": "^1.2.0",
     "rimraf": "^2.6.1",
-    "rollup": "^0.43.0",
-    "typescript": "^2.3.4",
+    "rollup": "^0.58.0",
+    "typescript": ">=2.4.2 <2.7",
     "uglify-js": "^3.0.20"
   }
 }
