--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "copyfiles": "^1.2.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.58.0",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "typescript": ">=2.4.2 <2.7",
     "uglify-js": "^3.0.20"
   }
