--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,22 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "declaration": true,
-    "stripInternal": true,
+    "declaration": false,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true,
     "module": "es2015",
     "moduleResolution": "node",
-    "rootDir": ".",
-    "outDir": "dist",
     "sourceMap": true,
-    "inlineSources": true,
     "target": "es5",
-    "skipLibCheck": true,
     "lib": [
-      "es2015",
+      "es2017",
       "dom"
-    ]
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
   },
-  "files": [
-    "index.ts"
-  ],
-  "angularCompilerOptions": {
-    "strictMetadataEmit": true
-  }
+  "exclude": [
+    "node_modules"
+  ]
 }
