Add files to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
       "es2017",
       "dom"
     ],
+    "files": [
+      "index.ts"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
