--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@chevtek/angular-spinners",
   "version": "5.1.2",
+  "main": "dist/bundles/chevtek-angular-spinners.umd.js",
+  "module": "dist/esm5/chevtek-angular-spinners.js",
   "description": "Easy loading spinner management for apps running Angular 2+",
   "scripts": {
     "ng": "ng",
@@ -9,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/chevtek/angular-spinners.git"
+    "url": "git+ssh://git@github.com/sdornan/angular-spinners.git"
   },
   "keywords": [
     "angular",
@@ -24,9 +26,9 @@
   "author": "Alex Ford",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chevtek/angular-spinners/issues"
+    "url": "https://github.com/sdornan/angular-spinners/issues"
   },
-  "homepage": "https://github.com/chevtek/angular-spinners#readme",
+  "homepage": "https://github.com/sdornan/angular-spinners#readme",
   "devDependencies": {
     "@angular/cli": "1.7.4",
     "@angular/compiler": ">=5.2.0",
